# easypost-tools

./: .env-example  .env.example  .eslintrc.yml  .gitignore  .golangci.yml  .shellcheckrc  Gemfile  Makefile  README.md  clone-ep-libraries.sh  composer.json  install.sh  justfile  package-lock.json  package.json  phpcs.xml  pyproject.toml  requirements.txt  setup.py  travis.yml
.github/workflows/: build.yml
batches/: generate-batch-label.js
clone-ep-libraries/: README.md
csv-shipment-create/: README.md  generate-batch-label.js  parse-csv.js  purchase-labels.js  repurchase-label-new.js  repurchase-labels.js
files/: clientlibraryperf.html  custom_barcode.txt  easypost_predefined_packages.txt  easypost_service_levels.txt  iso_country_codes.json  iso_country_codes.txt  shipment-options.txt
get-libraries/: .config  README.md  clone.sh  local.pullEasyPostLibraries.plist  pull.sh
php/: delete-carrier.php
playground/: buy-shipment.js  international-shipment.js  php.php  play.js  refund-labels.js
pretty/: prettify.js
recreate/: recreate-shipment.js
scripts/: flooder.sh
shipments/: README.md  create-shipment.cs  create-shipment.java  create-shipment.js  create-shipment.php  create-shipment.rb  create-shipment.sh  international-shipment.js  package-lock.json
shipments/c#/: C#.csproj
src/: README.md
src/addresses/: create-address.js
src/all-lang-examples/: README.md  create-shipment.go  create-shipment.js  create-shipment.rb
src/batches/: add-shipment-to-batch.js  create-batch.js  retrieveBatch.js
src/csharp/: csharp.csproj
src/get-client-libraries/: pull.sh
src/get-libraries/: README.md
src/go/: README.md  go.mod  go.sum
src/misc/: address_records.txt
src/mysql/: get-carrier-labels.sql  get-shipments-usps-zone.sql  get-trackers-by-carrier-for-user.sql
src/parcels/: create-parcel.js
src/php/: create-reports.php  test.php
src/pickups/: createPickup.js
src/playground/: return-label.js
webhooks/: update-webhook.js
(+541 files in other folders)
