[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easypost-tools"
description = "A large collection of supplemental tools for the EasyPost API spanning various programming languages."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8,<4"
license = { text = "MIT" }
authors = [{ name = "Justintime50" }]
urls = { Homepage = "http://github.com/justintime50/easypost-tools" }
dependencies = [
    "beautifulsoup4 ==4.*",
    "easypost ==10.*",
    "flask ==3.*",
    "Pillow ==12.*",
    "PyPDF2 ==1.27.*",
    "python-dotenv ==1.*",
    "pyzbar ==0.1.*",
]
optional-dependencies = { dev = [
    "black ==25.*",
    "flake8 ==7.*",
    "isort ==7.*",
] }

[tool.setuptools.packages.find]
exclude = ["examples", "test"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
indent = 4
force_grid_wrap = 2
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true
